[package]
name = "gphoto2-sys"
version = "0.1.2"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "FFI bindings to libgphoto2"
homepage = "https://github.com/dcuddeback/gphoto2-sys"
repository = "https://github.com/dcuddeback/gphoto2-sys"
license = "MIT"
readme = "README.md"
keywords = ["libgphoto2", "gphoto", "camera", "hardware"]
edition = "2018"

build = "build.rs"
links = "gphoto2"

[features]
std = ["libc/std"]
default = ["std"]

[dependencies]
libc = {version = "0.2", default-features=false}

[build-dependencies]
pkg-config = "0.3.2"
